--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "bootstrap": "^4.5.3",
     "pokemon": "^2.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
